# learning

./: README.md  README.txt
competition/codejam/practice2012/2008-round1a-minimum_scalar_product/: .gitignore  minimum_scalar_product.hs
competition/codejam/practice2012/qual-2009-A-alien_language/: alien_language.hs
competition/codejam/practice2012/qual-2010-A-store_credit/: .gitignore  store_credit.hs
competition/codejam/practice2012/qual-2010-B-reverse_words/: .gitignore  reverse_words.hs
competition/codejam/practice2012/qual-2010-C-t9_spelling/: .gitignore  t9_spelling.hs
competition/proggit-2010/bacongraph/: CMakeLists.txt
competition/proggit-2010/bacongraph/src/: bacongraph.hpp  main.cpp  solution.hpp  taxicab.hpp
haskell/: .gitignore
haskell/learning/: .gitignore  README  char.hs  cps.hs  data_tute.hs  fac.hs  fib.hs  fib2.hs  float.hs  hello.hs  hull.hs  import_tute.hs  io.hs  learning.cabal  library.hs  list.hs  min.hs  mult.hs  my_length.hs  palindrome.hs  pi.hs  pointfree.hs  poly.hs  pow.hs  simplefileio.hs  simpleio.hs  zero.hs
haskell/learning/Cards/: Cards.hs  Main.hs
haskell/real-world-haskell/: direction.hs  dropWhile.hs  height.hs  intersperse.hs  length.hs  list.hs  palindrome.hs  quicksort.hs
haskell/shake/: LICENSE  Shake.hs  shake-tools.cabal
haskell/shake-tools/: .gitignore  README.md  shake-tools.cabal
haskell/shake-tools/test/: Main.hs
haskell/shake/src/Development/Shake/Tools/: C.hs
haskell/shake/test/: Main.hs
haskell/wikibook/: hof.hs
